--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 node_modules
-*.log
-dist
-client/bower_components
 .tmp
-.grunt
-server/config/secrets.js
-.DS_Store
-.yo-rc.json
+.sass-cache
+bower_components
+test/bower_components
