--- a/.jshintrc
+++ b/.jshintrc
@@ -1,55 +1,19 @@
 {
+  "browser": true,
+  "node": true,
+  "esnext": true,
   "bitwise": true,
+  "camelcase": true,
   "curly": true,
   "eqeqeq": true,
-  "forin": true,
   "immed": true,
+  "indent": 2,
   "latedef": true,
   "newcap": true,
   "noarg": true,
-  "noempty": true,
-  "nonew": false,
-  "plusplus": false,
-  "regexp": true,
-  "undef": true,
-  "strict": true,
-  "trailing": true,
   "quotmark": "single",
-  "asi": false,
-  "debug": true,
-  "globalstrict": true,
-  "smarttabs": true,
-  "browser": true,
-  "devel": true,
-  "jquery": true,
-  "node": true,
-  "maxerr": 100,
-  "predef": [
-    "require",
-    "define",
-    "afterEach",
-    "beforeEach",
-    "confirm",
-    "context",
-    "describe",
-    "expect",
-    "it",
-    "jasmine",
-    "JSHINT",
-    "mostRecentAjaxRequest",
-    "qq",
-    "runs",
-    "spyOn",
-    "spyOnEvent",
-    "waitsFor",
-    "xdescribe"
-  ],
-  "globals": {
-    "$": true,
-    "Modernizr": true,
-    "angular": true,
-    "inject": true,
-    "jQuery": true
-  },
-  "indent": 2
+  "undef": true,
+  "unused": true,
+  "strict": true,
+  "jquery": true
 }
