--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,8 @@
 {
   "name": "4373alphaclient",
-  "version": "0.0.1",
+  "private": true,
   "dependencies": {
-    "consolelog": "~2.0.1",
-    "html5shiv": "~3.7.2",
-    "modernizr": "~2.8.1",
-    "normalize.css": "~3.0.1",
-    "angular": "~1.2.28",
-    "angular-route": "~1.2.28",
-    "json3": "~3.3.1",
-    "jquery": "~1.11.1"
-  },
-  "devDependencies": {
-    "angular-mocks": ">=1.2.*"
-  },
-  "resolutions": {
-    "angular": "1.3.14"
+    "bootstrap-sass-official": "~3.3.1",
+    "modernizr": "~2.8.1"
   }
 }
