--- a/package.json
+++ b/package.json
@@ -1,53 +1,31 @@
 {
-  "name": "4373alphaclient",
-  "version": "0.0.1",
-  "dependencies": {
-  },
-  "devDependencies": {
-    "rimraf": "~2.2.8",
-    "kss": "~1.3.0",
-    "grunt": "~0.4.2",
-    "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-styleguide": "~0.2.17",
-    "grunt-autoprefixer": "~1.0.1",
-    "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-usemin": "2.1.1",
-    "grunt-jsdoc": "beta",
-    "grunt-concurrent": "~1.0.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-wiredep": "~2.0.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-imagemin": "~0.9.1",
-    "imagemin-svgo": "~4.0.0",
-    "imagemin-pngquant": "~4.0.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "jshint-stylish": "~1.0.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-uglify": "~0.6.0",
-    "grunt-contrib-less": "~0.12.0",
-    "grunt-open": "~0.2.3",
-    "grunt-injector": "~0.5.3",
-    "grunt-angular-templates": "~0.5.7",
-    "grunt-ng-annotate": "~0.8.0",
-    "grunt-env": "~0.4.1",
-    "grunt-newer": "~0.7.0",
-    "underscore.string": "~2.3.3",
-    "include-all": "~0.1.6",
-    "grunt-karma": "~0.9.0",
-    "karma-phantomjs-launcher": "~0.1.2",
-    "karma-jasmine": "~0.2.0",
-    "karma": "~0.12.21",
-    "lodash": "~2.4.1",
-    "time-grunt": "0.2.10",
-    "bower": "~1.3.3",
-    "jit-grunt": "~0.9.0"
-  },
-  "scripts": {
-    "clean": "rimraf node_modules client/bower_components .tmp dist"
-  },
+  "private": true,
   "engines": {
     "node": ">=0.10.0"
+  },
+  "devDependencies": {
+    "autoprefixer-core": "^4.0.2",
+    "browser-sync": "^1.8.2",
+    "del": "^1.1.1",
+    "gulp": "^3.6.0",
+    "gulp-cache": "^0.2.2",
+    "gulp-csso": "^0.2.6",
+    "gulp-if": "^1.2.1",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-jshint": "^1.5.3",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-html": "^0.1.6",
+    "gulp-postcss": "^3.0.0",
+    "gulp-size": "^1.1.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-useref": "^1.0.2",
+    "jshint-stylish": "^1.0.0",
+    "main-bower-files": "^2.5.0",
+    "opn": "^1.0.0",
+    "wiredep": "^2.0.0",
+    "gulp-less": "~3.0.1",
+    "gulp-subtree": "~0.1.0",
+    "gulp-clean": "~0.3.1"
   }
 }
